# ArduPy

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  _frozen_mpy.c  apt  ardupy_loop.cpp  ardupy_storage.c  ardupy_storage.h  buildconfig.h  config-ardupy-grove-ui-wireless.json  config-ardupy-seeeduino-m0.json  get_resources.py  info.json  libaray.json  main.cpp  micropython.cmake  mpconfigboard_common.h  mpconfigport.h  mphalport.c  mphalport.h  portmodules.h  qstrdefsport.h  release_arduinocore.sh
ArduinoLibrarys/: arduinolib.cmake
boards/grove_ui_m4/: board.cmake  flash_with_bootloader.ld  grove_ui_m4_config.h  irq_it.c  mphalport.c  mphalport.h
boards/grove_ui_m4/flash/: Adafruit_FlashTransport.h  spi_flash.cpp
boards/grove_ui_m4/qspi/: Adafruit_FlashTransport.h  Adafruit_FlashTransport_QSPI.cpp  Adafruit_FlashTransport_QSPI.h  Adafruit_SPIFlash.cpp  Adafruit_SPIFlash.h  flash_devices.h  spi_flash.cpp
boards/seeeduino_m0/: board.cmake  flash_with_bootloader.ld  irq_it.c  mphalport.c  mphalport.h  seeeduino_m0_config.h
boards/seeeduino_m0/asf4/: AtmelStart.env_conf  AtmelStart.gpdsc
boards/seeeduino_m0/asf4/armcc/: Makefile
boards/seeeduino_m0/asf4/config/: peripheral_clk_config.h
boards/seeeduino_m0/asf4/examples/: driver_examples.c  driver_examples.h
boards/seeeduino_m0/asf4/gcc/: Makefile
boards/wio_terminal/: board.cmake  mphalport.c  mphalport.h
boards/wio_terminal/flash/: Adafruit_FlashCache.h  flash_devices.h  spi_flash.cpp
cmake/: common.cmake  compile-flags.cmake  dump-config.cmake  executable.cmake  samd21-compile-flags.cmake  samd21-executable.cmake  samd51-compile-flags.cmake  samd51-executable.cmake  toolchain.cmake
common-hal/analogio/: AnalogIn.c  AnalogIn.h  AnalogOut.c  AnalogOut.h
common-hal/board/: __init__.c
common-hal/busio/: I2C.cpp  I2C.h  OneWire.cpp  OneWire.h  SPI.c  SPI.cpp  SPI.h  UART.c  UART.cpp  UART.h
common-hal/busio/OneWire/: OneWire.cpp  OneWire.h
common-hal/busio/OneWire/util/: OneWire_direct_gpio.h
common-hal/digitalio/: DigitalInOut.c  DigitalInOut.h
common-hal/grove/: 3-AxisDigitalAccelerometer.cpp  4-DigitDisplay.cpp  GroveChainableLed.c  GroveChainableLed.cpp  GroveChainableLed.h  GroveLCD.cpp  GroveLedBar.cpp  GroveRgbLedStrip.cpp  GroveRtc.cpp  GroveRtc.h  GroveTemperatureHumiditySensor.cpp  GroveUltrasonicRanger.cpp  NeoPixel_hal.cpp  seeed_arduino_dht_hal.cpp  seeed_arduino_ds1307_hal.cpp  seeed_arduino_ds1307_hal.h  seeed_arduino_lcd_hal.cpp  seeed_arduino_mma7660_hal.cpp  seeed_arduino_mt1637_hal.cpp  seeed_arduino_my9221_hal.cpp  seeed_arduino_p9813led_hal.cpp  seeed_arduino_ultrasonic_sensor_hal.cpp
common-hal/microcontroller/: Pin.c  Pin.h  Processor.c  __init__.c
common-hal/os/: __init__.c
common-hal/pulseio/: PWMOut.c  PWMOut.cpp  PWMOut.h  PulseIn.c  PulseIn.h  PulseOut.c  PulseOut.h
common-hal/supervisor/: Runtime.c
common-hal/time/: __init__.c  __init__.h
examples/Blink/: Blink.ino
examples/Grovepy/: Grovepy.ino
frozen/: _frozen_mpy.c
frozen/adafruit_bus_device/: __init__.mpy  i2c_device.mpy  i2c_device.py  spi_device.mpy  spi_device.py
modules/: frozentest.mpy
ports/samd/: CMakeLists.txt  ardupy_init.c  ardupy_loop.cpp  ardupy_storage.c  ardupy_storage.h  ardupy_usb.c  ardupy_usb.cpp  ardupy_usb.h  ardupy_util.h  ardupy_utils.h  micropython.cmake  mpconfigboard.h  mpconfigport.h  qstrdefsport.h  release_arduinocore.sh  release_ardupycore.sh
ports/samd/boards/wio_terminal/: board.cmake  mod_machine_map.c  mpconfigboard.h  mphalport.c  mphalport.h  spi_flash.cpp
ports/samd/boards/xiao/: board.cmake  (+4 more)
ports/samd/cmake/: common.cmake  samd21-compile-flags.cmake  samd21-executable.cmake  samd51-compile-flags.cmake  samd51-executable.cmake
ports/samd/frozen/: _frozen_mpy.c
shared-bindings/: arduino_util.cpp  arduino_util.h  mod_ardupy.c  mod_machine_adc.c  mod_machine_dac.c  mod_machine_lcd.c  mod_machine_pin.c  mod_machine_pwm.c  mod_machine_uart.c  mod_random.c  mod_uheap.c  mod_uos.c  mod_ustack.c  mod_utime.c  modmachine.c  modmachine.h  util.c  util.h  wrapper_lcd.cpp  wrapper_lcd.h  wrapper_pwm.cpp  wrapper_pwm.h  wrapper_tone.cpp  wrapper_tone.h  wrapper_uart.cpp
shared-bindings/analogio/: AnalogIn.c  AnalogOut.c  __init__.c
shared-bindings/board/: __init__.c
shared-bindings/busio/: I2C.c  I2C.h  OneWire.c  OneWire.h  SPI.c  UART.c  UART.h  __init__.c
shared-bindings/digitalio/: DigitalInOut.c  Direction.c
shared-bindings/grove/: 3-AxisDigitalAccelerometer.c  Grove3-AxisDigitalAccelerometer.c  Grove4-DigitDisplay.c  GroveButton.c  GroveChainableLed.c  GroveLCD.c  GroveLed.c  GroveLedBar.c  GroveRgbLedStrip.c  GroveRtc-Datetime.c  GroveRtc.c  GroveTemperatureHumiditySensor.c  GroveUltrasonicRanger.c  IC-Type.c  NeoPixel.c  __init__.c  seeed_arduino_button.c  seeed_arduino_dht.c  seeed_arduino_dht_ic_type.c  seeed_arduino_ds1307.c  seeed_arduino_ds1307_datatime.c  seeed_arduino_led.c  seeed_arduino_mma7660.c  seeed_arduino_mt1637.c  seeed_arduino_p9813led.c
shared-bindings/grove/grove_button/: GroveButton.c
shared-bindings/grove/grove_led/: GroveLed.c
shared-bindings/math/: __init__.c
shared-bindings/microcontroller/: Pin.c  Pin.h  Processor.c  Processor.h  RunMode.c  __init__.c  __init__.h
shared-bindings/pulseio/: PWMOut.c  PulseIn.c  PulseOut.c  __init__.c
shared-bindings/random/: __init__.c
shared-bindings/supervisor/: Runtime.c  __init__.c
submodule/: Adafruit_NeoPixel.cpp  ChainableLED.cpp  ChainableLED.h  DHT.cpp  DHT.h  DS1307.cpp  DS1307.h  Grove_LED_Bar.cpp  Grove_LED_Bar.h  MMA7660.cpp  MMA7660.h  TM1637.cpp  TM1637.h  Ultrasonic.cpp  Ultrasonic.h
submodule/GroveUi/src/: grove_terminal.cpp  grove_terminal.h
submodule/Seeed_Arduino_LCD/: README.md  TFT_eSPI.cpp  TFT_eSPI.h  User_Setup.h  User_Setup_Select.h  library.properties
submodule/Seeed_Arduino_LCD/Extensions/: Button.cpp  Button.h  Smooth_font.cpp  Sprite.cpp  Sprite.h  Touch.cpp  Touch.h
submodule/Seeed_Arduino_LCD/Fonts/: Font16.c  Font32rle.c  Font64rle.c  Font72rle.c  Font72x53rle.c  Font7srle.c  glcdfont.c
(+18 files in other folders)
